<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">trakt it</string>
    <string name="action_settings">Settings
    </string>
    <string name="hello_world">Hello world!
    </string>
    <string name="episode">Episode Title</string>
    <string name="votes">Votes</string>
    <string name="overview">Overview</string>
    <string name="network">Network</string>
    <string name="on">on</string>
    <string name="nextepisode">Next Episode</string>
    <array name="calendar_longclick">
        <item>Mark as seen</item>
        <item>Love</item>
    </array>
    <array name="navigation_drawer">
        <item>Trending</item>
        <item>Library</item>
        <item>Recommended</item>
        <item>Watchlist</item>
        <item>Calendar</item>
        <item>User activity</item>
    </array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">App not available</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="share">Share</string>
    <string name="watchlist">Watchlist</string>
    <string name="seen">Seen</string>
    <string name="loved">Loved</string>
    <string name="hated">Hated</string>
    <string name="unrate">Unrate</string>
    <string name="remove_watchlist">Unwatchlist</string>
    <string name="unwatchlist">Unwatchlist</string>
    <string name="checkin">Checkin</string>
    <string name="refresh">Refresh</string>
    <string name="unseen">Unseen</string>
    <string name="youtube">YouTube</string>
    <string name="action_share">Share</string>
    <string name="enter_comment_hint">Write your own comment</string>
    <string name="comment_short">Your comment is too short</string>
    <string name="phrase_trakt">Track what you\'re watching.</string>
    <string name="phrase2_trakt">Discover new shows &amp; movies</string>
    <string name="register">Register</string>
    <string name="watchlist_remove">Remove from watchlist</string>
    <string name="register_info">Fill the form below to register</string>
    <string name="prompt_retype_password">Retype password</string>
    <string name="error_missmatch_password">Password missmatch</string>
    <string name="error_username_length_invalid">Must be between 3 and 20 characters</string>
    <string name="error_password_short">Password is too short</string>
    <string name="error_incorrect_username">Username incorrect</string>
    <string name="error_exists_username">Username already exists</string>
    <string name="error_incorrect_username_or_password">Username or password incorrect</string>
    <string name="register_loading">Registering…</string>
    <string name="action_register_in_short">register</string>
    <string name="movie">Movie title</string>
    <string name="episode_loading">Loading episode…</string>
    <string name="widget_tonight_episodes">Tonight episodes</string>
    <string name="show_name">Show Name</string>
    <string name="need_login">You need to login in the app first</string>
    <string name="widget_loading">Loading</string>
    <string name="show_loading">Loading show</string>
    <string name="movie_loading">Loading movie</string>
    <string name="search_loading">Searching…</string>
    <string name="recommended_loading">Loading recommendations</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="widget_tonight_episodes_empty">No shows tonight</string>
    <string name="rate">Rate</string>
    <string name="Calendar">Calendar</string>
    <string name="UserActivity">User activity</string>
    <string name="search">Search</string>
    <string name="logout">Logout from trakt</string>
    <string name="prefs_account">Trakt account</string>
    <string name="pref_notifications">Notifications</string>
    <string name="prefs_enable_notifications">Enable</string>
    <string name="prefs_enable_notifications_summary">Enable all notifications</string>
    <string name="prefs_enable_tonight_shows_notifications">Tonight Shows</string>
    <string name="prefs_enable_tonight_shows_notifications_summary">Enable a notification with your shows airing tonight</string>
    <string name="prefs_enable_checkin_notifications_summary">Enable a notification when you are watching movie or an episode</string>
    <string name="prefs_enable_checkin_notifications">Checkin</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec augue nisl. Sed a ultricies dolor. Sed vitae velit rutrum, pellentesque nisi sit amet, cursus justo. Donec a congue leo, luctus tempor leo. In hac habitasse platea dictumst. Proin sed mi a magna auctor semper sed vestibulum odio. Aliquam in urna massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
    <array name="watchlist">


        <item>Remove from watchlist</item>
        <!--<item>Loved</item>-->
        <!--<item>Hated</item>-->

    </array>
</resources>
