<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<ScrollView android:id="@+id/scrollViewepisodeInfoLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/nowCardStyle"
            >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewEpisodeScreen"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/episode_backdrop"
            android:minHeight="200dp"/>

        <TextView
            android:id="@+id/textViewMovieTitle"
            style="@style/CardTitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/imageViewEpisodeScreen"
            android:layout_toRightOf="@+id/textViewEpisodeSeasonNumber"
            android:layout_marginLeft="2dp"
            android:layout_alignParentRight="true"/>
        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:padding="2dp"
            android:layout_below="@+id/textViewEpisodeShow"
            android:layout_alignParentLeft="true"/>


        <TextView
            android:id="@+id/textViewEpisodeAirDate"
            style="@style/Item.Sticky.1Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_toRightOf="@+id/imageView"
            android:layout_below="@+id/imageViewFavoriteImage"
            android:layout_alignBottom="@+id/imageView"/>



        <TextView
            android:id="@+id/text2"
            style="@style/CardTitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/textViewEpisodeAirDate"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/textViewEpisodeOverview"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/lorem_ipsum"
            android:layout_below="@+id/text2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewWatchlistTag"
            android:layout_alignParentTop="true"
            android:paddingLeft="30dp"
            android:src="@drawable/watchlist_tag"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewCollectionTag"
            android:layout_alignParentTop="true"
            android:paddingLeft="25dp"
            android:src="@drawable/collections_tag"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewLovedTag"
            android:layout_alignRight="@+id/imageViewEpisodeScreen"
            android:layout_alignTop="@+id/imageViewEpisodeScreen"
            android:src="@drawable/hearth_tag"
            android:visibility="gone"/>
        <RelativeLayout
            android:id="@+id/relativeLayoutAdvanceRating"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textViewShowNextEpisode">
            <RelativeLayout
                android:id="@+id/relativeLayoutAdvanceRatingBackground"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/rate_tag_triangle"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:rotation="-135"
                android:transformPivotX="53dp"
                android:transformPivotY="10dp">

            </RelativeLayout>
            <TextView

                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="10"
                android:textAlignment="center"
                android:rotation="45"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:id="@+id/textViewShowRatingAdvance"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/imageViewEpisodeSeen"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignRight="@+id/imageViewEpisodeScreen"
            android:layout_alignTop="@+id/imageViewEpisodeScreen"
            android:src="@drawable/seen_tag" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewHatedTag"
            android:layout_alignRight="@+id/imageViewEpisodeScreen"
            android:layout_alignTop="@+id/imageViewEpisodeScreen"
            android:src="@drawable/hated_tag"
            android:visibility="gone"/>


        <TextView
            style="@style/CardTitleBold.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="S1E2"
            android:gravity="center_vertical"
            android:id="@+id/textViewEpisodeSeasonNumber"
            android:layout_alignTop="@+id/textViewMovieTitle"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/show_name"
            android:gravity="center_vertical"
            android:id="@+id/textViewEpisodeShow"
            style="@style/CardTitleBold.Blue"
            android:layout_below="@+id/textViewMovieTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

        <ImageView
            android:id="@+id/imageViewFavoriteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rating_favorite"
            android:layout_below="@+id/textViewEpisodeShow"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/textViewEpisodeRatingsPercentage"
            style="@style/CardTitleBold.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="93%"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignBottom="@+id/imageViewFavoriteImage"
            android:layout_toRightOf="@+id/imageViewFavoriteImage"
            android:layout_below="@+id/textViewEpisodeShow"/>

        <TextView
            android:id="@+id/textViewEpisodeRatingsVotes"
            style="@style/CardText"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/view1"
            android:layout_toRightOf="@+id/textViewEpisodeRatingsPercentage"
            android:layout_alignBottom="@+id/textViewEpisodeRatingsPercentage"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_go_to_today"
            android:layout_below="@+id/imageViewFavoriteImage"
            android:layout_alignParentLeft="true"/>

        <TextView
            style="@style/CardTitleBold"
            android:id="@+id/textViewEpisodeInfoRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50 minutes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/view1"
            android:layout_alignRight="@+id/view1"
            android:layout_above="@+id/textViewEpisodeAirDate"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_clock"
            android:layout_above="@+id/textViewEpisodeAirDate"
            android:layout_toLeftOf="@+id/textViewEpisodeInfoRuntime"/>

        <TextView
            style="@style/CardText"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/on"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignBottom="@+id/textViewEpisodeAirDate"
            android:layout_toRightOf="@+id/textViewEpisodeAirDate"
            android:layout_alignTop="@+id/textViewEpisodeAirDate"
            android:gravity="center_vertical"/>

        <TextView
            style="@style/CardTitleBold.Blue"
            android:id="@+id/textViewEpisodeInfoNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"/>

    </RelativeLayout>

</ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutEpisodeLoading"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone">


        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/episode_loading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical" />

    </LinearLayout>


</RelativeLayout>