<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/nowCardStyle">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewEpisodeScreen"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/episode_backdrop" />

        <TextView
            android:id="@+id/textViewEpisodeTitle"
            style="@style/CardTitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewEpisodeScreen"
            android:layout_alignLeft="@+id/imageViewEpisodeScreen"
            android:text="@string/episode"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textViewEpisodeTitle"
            android:background="@color/light_grey"
            android:padding="2dp" />

        <RelativeLayout
            android:id="@+id/Layoutstats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/imageViewFavoriteImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/rating_favorite" />

            <TextView
                android:id="@+id/textViewEpisodeRatingsVotes"
                style="@style/CardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textViewEpisodeRatingsPercentage"
                android:text="@string/votes"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewEpisodeRatingsPercentage"
                style="@style/CardTitleBold.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageViewFavoriteImage"
                android:text="93%"
                android:textAppearance="?android:attr/textAppearanceLarge" />



        </RelativeLayout>


        <TextView
            android:id="@+id/textViewEpisodeAirDate"
            style="@style/Item.Sticky.1Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Layoutstats"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageViewEpisodeSeen"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignRight="@+id/imageViewEpisodeScreen"
            android:layout_alignTop="@+id/imageViewEpisodeScreen"
            android:src="@drawable/seen_tag" />

        <TextView
            android:id="@+id/text2"
            style="@style/CardTitleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_marginTop="2dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/textViewEpisodeAirDate"/>

        <TextView
            android:id="@+id/textViewEpisodeOverview"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="Small Text"
            android:layout_below="@+id/text2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewWatchlistTag"
            android:layout_alignParentTop="true"
            android:paddingLeft="30dp"
            android:src="@drawable/watchlist_tag"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewCollectionTag"
            android:layout_alignParentTop="true"
            android:paddingLeft="25dp"
            android:src="@drawable/collections_tag"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewLovedTag"
            android:layout_alignRight="@+id/imageViewEpisodeScreen"
            android:layout_alignTop="@+id/imageViewEpisodeScreen"
            android:src="@drawable/hearth_tag"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewHatedTag"
            android:layout_alignRight="@+id/imageViewEpisodeScreen"
            android:layout_alignTop="@+id/imageViewEpisodeScreen"
            android:src="@drawable/hated_tag"/>

        <ImageView
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:id="@+id/imageViewMoviePoster"
            android:scaleType="centerCrop"
            android:layout_above="@+id/textViewEpisodeTitle"
            android:layout_alignLeft="@+id/imageViewEpisodeScreen"
            android:adjustViewBounds="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/poster"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageViewMoviePlayTrailer"
            android:adjustViewBounds="true"
            android:src="@drawable/play_trailer"
            android:layout_alignTop="@+id/imageViewEpisodeScreen"
            android:layout_alignLeft="@+id/imageViewEpisodeScreen"
            android:layout_above="@+id/textViewEpisodeTitle"
            android:layout_alignRight="@+id/imageViewEpisodeSeen"/>

    </RelativeLayout>

</ScrollView>